# Bisquick

./: .gitignore  CMakeLists.txt  README.md  bisquick_index.cpp  bisquick_index.h  main.cpp  reads_processing.cpp  reads_processing.h  seqantst.cpp  utils.cpp  utils.h
testdata/chrm21/bisulfite_reads/: simulated.fastq
